# mivi-imaging-service

./: .gitignore  CMakeLists.txt  architecure.md  protocol.md
cpp/: CMakeLists.txt
cpp/include/api/: ffi_bindings.h  imaging_service.h
cpp/include/communication/: grpc_server.h  shared_memory.h
cpp/include/device/: blackmagic_device.h  device_manager.h  ultrasound_device.h
cpp/include/frame/: frame.h  frame_processor.h
cpp/include/utils/: refiid_compare.h
cpp/src/: main.cpp
cpp/src/api/: calibration.cpp  device_discovery.cpp  ffi_bindings.cpp  imaging_service.cpp
cpp/src/communication/: grpc_server.cpp  shared_memory.cpp
cpp/src/device/: blackmagic_device.cpp  device_manager.cpp  ultrasound_device.cpp
cpp/src/frame/: frame.cpp  frame_processor.cpp  segmentation.cpp
include/api/: universal_imaging_service.h  webcam_imaging_service.h
include/communication/: shared_memory.h
include/device/: blackmagic_device.h  device_adapters.h  device_manager.h  imaging_device_adapter.h  webcam_device.h
include/utils/: cuda_helper.h  video_constants.h
proto/: imaging_service.proto
src/: main.cpp
src/api/: imaging_service.cpp  universal_imaging_service.cpp  webcam_imaging_service.cpp
src/communication/: shared_memory.cpp
src/device/: blackmagic_device.cpp  device_adapters.cpp  device_manager.cpp  imaging_device_adapter.cpp  imaging_device_manager.cpp  webcam_device.cpp
src/frame/: frame.cpp
src/utils/: cuda_helper.cpp
